# shelf

./: .gitignore  Cargo.toml  LICENSE  README.md  project_plan.md
.ai/: GEMINI.md  ai-development-manifesto.md  project-plan.md  todo.md
src/: config.rs  error.rs  file_utils.rs  main.rs
src/commands/: disable.rs  enable.rs  list.rs  mod.rs  status.rs
tests/: disable.rs  enable.rs  list.rs  status.rs
tests/fixtures/: .shelf.yaml
