[package]
name = "shelf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
predicates = "3.1"

